# aoc2021

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
src/: main.rs
src/day1/: day1.rs
src/day2/: day2.rs
src/day3/: day3.rs
src/day4/: day4.rs
src/day5/: README.md  day5.rs  result.txt
src/diagnose_binary/: diagnose_binary.rs  mod.rs
src/dive/: README.md  mod.rs
src/giant_squid/: README.md  giant_squid.rs  mod.rs
src/measure_increase/: measure_increase.rs  mod.rs
src/utils/: read_lines.rs
