[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Hueseyin Yildiz <huess@juicyarts.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[features]
coverage = []
